objects/Service_Tier_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Event_Cloud_Vs_Hospitality_Cloud__c</fullName>
        <description>This will show the Mapping according to the Event/Hospitality Product in Account.</description>
        <label>Product Offering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Amount__c</fullName>
        <description>This field is used to show the Max Amount required to fall in a particular TIER category.</description>
        <label>Max Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Amount__c</fullName>
        <description>This field is used to show the Min Amount required to fall in a particular TIER category.</description>
        <label>Min Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <description>This Object is used to store the name of the TIER and the amount range in which it lies.</description>
    <label>Service Tier Mapping</label>
    <nameField>
        <label>Service Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Tier Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Min_Amount__c</columns>
        <columns>Max_Amount__c</columns>
        <columns>Event_Cloud_Vs_Hospitality_Cloud__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Event_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Min_Amount__c</columns>
        <columns>Max_Amount__c</columns>
        <columns>Event_Cloud_Vs_Hospitality_Cloud__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Cloud_Vs_Hospitality_Cloud__c</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <label>Event Cloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Hospitality_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Min_Amount__c</columns>
        <columns>Max_Amount__c</columns>
        <columns>Event_Cloud_Vs_Hospitality_Cloud__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Cloud_Vs_Hospitality_Cloud__c</field>
            <operation>equals</operation>
            <value>Hospitality</value>
        </filters>
        <label>Hospitality Cloud</label>
        <language>en_US</language>
    </listViews>
</CustomObject>